--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@
 .calculator-body {
     margin: 10vh auto;
     border: solid black 2px;
+    border-radius: 5px;
     max-width: 300px;
     max-height: 800px;
     padding: 1.5em;
+    box-shadow: 5px 5px;
 }
 
 .display {
@@ -31,6 +33,7 @@
 
 .btn {
     padding: 1em;
+    box-shadow: 5px 5px;
 }
 
 /* button positions */
